objects/Child_Object__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>test_Field123__c</fullName>
        <label>test Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_Field_2__c</fullName>
        <label>test Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Child Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ch-{0000}</displayFormat>
        <label>Child Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>